{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 439,
  "lineage": "821fa37a-0004-d792-a562-c7a531079f1f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:security-group/sg-0c3c4651ef863d951",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c3c4651ef863d951",
            "ingress": [],
            "name": "myapp-eks-cluster-cluster-20250301143747583000000009",
            "name_prefix": "myapp-eks-cluster-cluster-",
            "owner_id": "808826729764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:security-group/sg-074d7a22b3c102a22",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-074d7a22b3c102a22",
            "ingress": [],
            "name": "myapp-eks-cluster-node-20250301143745874600000008",
            "name_prefix": "myapp-eks-cluster-node-",
            "owner_id": "808826729764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1221427162",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c3c4651ef863d951",
            "security_group_rule_id": "sgr-02475f8e0f03aec2c",
            "self": false,
            "source_security_group_id": "sg-074d7a22b3c102a22",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2214293166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-05c089295dcbdaf46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-272072081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-0b2bac207fd9e72c5",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-528551712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-0162e192655e0effb",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3603130550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-0c98dc1ec25acf0cf",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3315553431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-0c727fb28688a121d",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2705221468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-000ba169a0fb29e9a",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3878836465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-00fcaeff86014d319",
            "self": false,
            "source_security_group_id": "sg-0c3c4651ef863d951",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1005757871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-03bb2e0b601ef13ae",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2406631945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-06d60191a693c8838",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-724429286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-074d7a22b3c102a22",
            "security_group_rule_id": "sgr-08baf9f4e29a2f83c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:network-acl/acl-04dd333ce8ac8b43b",
            "default_network_acl_id": "acl-04dd333ce8ac8b43b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04dd333ce8ac8b43b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "808826729764",
            "subnet_ids": [
              "subnet-048d93a9fbad4a73e",
              "subnet-057199600d0ed939e",
              "subnet-08396a8e77162122d",
              "subnet-08dc2edccbfc482f4",
              "subnet-0a73b712a4af5c526",
              "subnet-0c0150ee26c452bfe"
            ],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:route-table/rtb-0bcf4b4d859605e6c",
            "default_route_table_id": "rtb-0bcf4b4d859605e6c",
            "id": "rtb-0bcf4b4d859605e6c",
            "owner_id": "808826729764",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:security-group/sg-0b3c29bd3ee06727d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b3c29bd3ee06727d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "808826729764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035e61cdf3eb7cc56",
            "domain": "vpc",
            "id": "eipalloc-035e61cdf3eb7cc56",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-226-38-225.compute-1.amazonaws.com",
            "public_ip": "54.226.38.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:internet-gateway/igw-01525906d3dcc27bd",
            "id": "igw-01525906d3dcc27bd",
            "owner_id": "808826729764",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035e61cdf3eb7cc56",
            "association_id": "eipassoc-022627e78724b37d8",
            "connectivity_type": "public",
            "id": "nat-0849ff5ce29f3a31e",
            "network_interface_id": "eni-09024e41edc6e9aac",
            "private_ip": "10.0.4.75",
            "public_ip": "54.226.38.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08396a8e77162122d",
            "tags": {
              "Name": "myapp-vpc-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a806c34b9c4631341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0849ff5ce29f3a31e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a806c34b9c463134",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01525906d3dcc27bd",
            "id": "r-rtb-0d1b2e474a302724b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1b2e474a302724b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:route-table/rtb-0a806c34b9c463134",
            "id": "rtb-0a806c34b9c463134",
            "owner_id": "808826729764",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:route-table/rtb-0d1b2e474a302724b",
            "id": "rtb-0d1b2e474a302724b",
            "owner_id": "808826729764",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea182d292ad5125",
            "route_table_id": "rtb-0a806c34b9c463134",
            "subnet_id": "subnet-057199600d0ed939e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021b2060c6909a59f",
            "route_table_id": "rtb-0a806c34b9c463134",
            "subnet_id": "subnet-08dc2edccbfc482f4"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cfbf89396778c6",
            "route_table_id": "rtb-0a806c34b9c463134",
            "subnet_id": "subnet-0a73b712a4af5c526"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c3b0da564824bcf",
            "route_table_id": "rtb-0d1b2e474a302724b",
            "subnet_id": "subnet-08396a8e77162122d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4012aab5610a752",
            "route_table_id": "rtb-0d1b2e474a302724b",
            "subnet_id": "subnet-0c0150ee26c452bfe"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cc6ead91a0d234a",
            "route_table_id": "rtb-0d1b2e474a302724b",
            "subnet_id": "subnet-048d93a9fbad4a73e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-057199600d0ed939e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057199600d0ed939e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-08dc2edccbfc482f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dc2edccbfc482f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-us-east-1b",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-us-east-1b",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-0a73b712a4af5c526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73b712a4af5c526",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-us-east-1c",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-us-east-1c",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-08396a8e77162122d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08396a8e77162122d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-us-east-1a",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-0c0150ee26c452bfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0150ee26c452bfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-us-east-1b",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-us-east-1b",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:subnet/subnet-048d93a9fbad4a73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d93a9fbad4a73e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808826729764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-us-east-1c",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-us-east-1c",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae383a9bf7d34e62"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808826729764:vpc/vpc-0ae383a9bf7d34e62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04dd333ce8ac8b43b",
            "default_route_table_id": "rtb-0bcf4b4d859605e6c",
            "default_security_group_id": "sg-0b3c29bd3ee06727d",
            "dhcp_options_id": "dopt-0444c78c55da7b56b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae383a9bf7d34e62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcf4b4d859605e6c",
            "owner_id": "808826729764",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/muapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}